--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         <a href="#" class="mx-2">
           <i class="fab fa-twitter"></i>
         </a>
-        <a href="https://www.facebook.com/a.tin.tin.a" class="mx-2">
+        <a href="https://www.facebook.com/a.tin.tin.a" class="mx-2" target="_blank">
           <i class="fab fa-facebook-f"></i>
         </a>
         <a href="https://github.com/atintina" class="mx-2">
