--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#about">Intro</a>
+              <a class="nav-link js-scroll-trigger" href="#intro">Intro</a>
             </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
@@ -97,8 +97,7 @@
   </style>
 
     <!-- Intro Section -->
-    <section id="intro" class="intro-section bg-light"></section>
-    <section id="Intro" class="intro-section text-center">
+    <section id="intro" class="intro-section text-center bg-light">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 mx-auto">
@@ -108,7 +107,7 @@
            <div class="intro-video">
               <iframe width="100%" src="https://www.youtube.com/embed/QcIy9NiNbmo?start=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
-          </div>>
+          </div>
         </div>
       </div>
     </section>
