--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       height: 10px;
       border-radius: 5px;
       content: '';
-      background-color: #ffffff;
+      background-color: #911414;
     }
     .slick-dots li.slick-active button:before{
       background-color: #000000;
@@ -140,20 +140,23 @@
       border-left-width: 8px;
       border-top-style: solid;
       border-left-style: solid;
-      transform: rotate(-45deg);
+      transform: rotate(-25deg);
     }
     .slick-buttons.slick-next:before{
       border-bottom-width: 8px;
       border-right-width: 8px;
       border-bottom-style: solid;
       border-right-style: solid;
-      transform: rotate(-45deg);
+      transform: rotate(-25deg);
     }
     .slick-buttons.slick-next{
       right: 20px;
     }
 
   .intro-section {
+    padding: 10rem 0 0;
+  }
+  .slider {
     padding: 10rem 0 0;
   }
   .intro-video{
