--- a/index.html
+++ b/index.html
@@ -3,12 +3,30 @@
 
 <head>
 
-  <meta charset="utf-8">
+  <!-- COMMON TAGS -->
+<meta charset="utf-8">
+<title>Black And White </title>
+<!-- Search Engine -->
+<meta name="description" content="How come  I will know how to description ">
+<meta name="image" content="https://atintina.github.io/startbootstrap-grayscale//img/slider/Pic2.jpg">
+<!-- Schema.org for Google -->
+<meta itemprop="name" content="Black And White ">
+<meta itemprop="description" content="How come  I will know how to description ">
+<meta itemprop="image" content="https://atintina.github.io/startbootstrap-grayscale//img/slider/Pic2.jpg">
+<!-- Open Graph general (Facebook, Pinterest & Google+) -->
+<meta name="og:title" content="Black And White ">
+<meta name="og:description" content="How come  I will know how to description ">
+<meta name="og:image" content="https://atintina.github.io/startbootstrap-grayscale//img/slider/Pic2.jpg">
+<meta name="og:url" content="https://atintina.github.io/startbootstrap-grayscale/">
+<meta name="og:site_name" content="B & W">
+<meta name="og:type" content="website">
+
+  
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
+ 
   <meta name="author" content="">
 
-  <title>Black-And-White</title>
+  
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -22,6 +40,8 @@
   <link href="css/grayscale.min.css" rel="stylesheet">
 
   <link rel="stylesheet" type="text/css" href="css/slick.css"/>
+
+  
 </head>
 
 <body id="page-top">
