--- a/index.html
+++ b/index.html
@@ -4,29 +4,29 @@
 <head>
 
   <!-- COMMON TAGS -->
-<meta charset="utf-8">
-<title>Black And White </title>
-<!-- Search Engine -->
-<meta name="description" content="How come  I will know how to description ">
-<meta name="image" content="https://atintina.github.io/startbootstrap-grayscale//img/slider/Pic2.jpg">
-<!-- Schema.org for Google -->
-<meta itemprop="name" content="Black And White ">
-<meta itemprop="description" content="How come  I will know how to description ">
-<meta itemprop="image" content="https://atintina.github.io/startbootstrap-grayscale//img/slider/Pic2.jpg">
-<!-- Open Graph general (Facebook, Pinterest & Google+) -->
-<meta name="og:title" content="Black And White ">
-<meta name="og:description" content="How come  I will know how to description ">
-<meta name="og:image" content="https://atintina.github.io/startbootstrap-grayscale//img/slider/Pic2.jpg">
-<meta name="og:url" content="https://atintina.github.io/startbootstrap-grayscale/">
-<meta name="og:site_name" content="B & W">
-<meta name="og:type" content="website">
+  <meta charset="utf-8">
+  <title>Black And White </title>
+  <!-- Search Engine -->
+  <meta name="description" content="How come I will know how to wtite the description ">
+  <meta name="image" content="https://atintina.github.io/startbootstrap-grayscale//img/slider/Pic2.jpg">
+  <!-- Schema.org for Google -->
+  <meta itemprop="name" content="B & W">
+  <meta itemprop="description" content="How come  I will know how to write the description ">
+  <meta itemprop="image" content="https://atintina.github.io/startbootstrap-grayscale//img/slider/Pic2.jpg">
+  <!-- Open Graph general (Facebook, Pinterest & Google+) -->
+  <meta name="og:title" content="B & W">
+  <meta name="og:description" content="How come  I will know how to write the description ">
+  <meta name="og:image" content="https://atintina.github.io/startbootstrap-grayscale//img/slider/Pic2.jpg">
+  <meta name="og:url" content="https://atintina.github.io/startbootstrap-grayscale/">
+  <meta name="og:site_name" content="B & W">
+  <meta name="og:type" content="website">
 
-  
+
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
- 
+
   <meta name="author" content="">
 
-  
+
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -34,14 +34,16 @@
   <!-- Custom fonts for this template -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+    rel="stylesheet">
 
   <!-- Custom styles for this template -->
   <link href="css/grayscale.min.css" rel="stylesheet">
 
-  <link rel="stylesheet" type="text/css" href="css/slick.css"/>
+  <link rel="stylesheet" type="text/css" href="css/slick.css" />
 
-  
+
 </head>
 
 <body id="page-top">
@@ -50,7 +52,9 @@
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">Christy Tin</a>
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+        data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+        aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
       </button>
@@ -60,8 +64,8 @@
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#intro">Intro</a>
-            </li>
+            <a class="nav-link js-scroll-trigger" href="#intro">Intro</a>
+          </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
           </li>
@@ -90,8 +94,10 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <h2 class="text-white mb-4">Built with Bootstrap 4</h2>
-          <p class="text-white-50">Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
-            <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
+          <p class="text-white-50">Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right
+            now, simply download the template on
+            <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open
+            source, and you can use it for any purpose, personal or commercial.</p>
         </div>
       </div>
       <img src="img/ipad.png" class="img-fluid" alt="">
@@ -99,7 +105,7 @@
   </section>
 
   <style>
-    .slick-dots{
+    .slick-dots {
       position: absolute;
       bottom: 20px;
       left: 0;
@@ -108,19 +114,23 @@
       text-align: center;
       margin: 0;
     }
-    .slick-dots li{
+
+    .slick-dots li {
       display: inline-block;
     }
-    .slick-dots li button{
+
+    .slick-dots li button {
       outline: none;
       display: inline-block;
       background-color: transparent;
       border-width: 0;
     }
-    .slick-dots li button span{
+
+    .slick-dots li button span {
       display: none;
     }
-    .slick-dots li button:before{
+
+    .slick-dots li button:before {
       display: inline-block;
       width: 10px;
       height: 10px;
@@ -128,99 +138,115 @@
       content: '';
       background-color: #911414;
     }
-    .slick-dots li.slick-active button:before{
+
+    .slick-dots li.slick-active button:before {
       background-color: #000000;
     }
-    .slick-buttons{
+
+    .slick-buttons {
       background-color: transparent;
       border-width: 0;
     }
-    .slick-buttons{
+
+    .slick-buttons {
       position: absolute;
       top: 50%;
       transform: translate3d(0, -50%, 0);
       z-index: 2;
     }
-    .slick-buttons span{
+
+    .slick-buttons span {
       display: none;
     }
+
     .slick-buttons.slick-prev:before,
-    .slick-buttons.slick-next:before{
+    .slick-buttons.slick-next:before {
       display: block;
       width: 20px;
       height: 20px;
       border-color: #ad000088;
       content: '';
     }
-    .slick-buttons.slick-prev{
+
+    .slick-buttons.slick-prev {
       left: 20px;
     }
-    .slick-buttons.slick-prev:before{
+
+    .slick-buttons.slick-prev:before {
       border-top-width: 8px;
       border-left-width: 8px;
       border-top-style: solid;
       border-left-style: solid;
       transform: rotate(-25deg);
     }
-    .slick-buttons.slick-next:before{
+
+    .slick-buttons.slick-next:before {
       border-bottom-width: 8px;
       border-right-width: 8px;
       border-bottom-style: solid;
       border-right-style: solid;
       transform: rotate(-25deg);
     }
-    .slick-buttons.slick-next{
+
+    .slick-buttons.slick-next {
       right: 20px;
     }
 
-  .intro-section {
-    padding: 10rem 0 0;
-  }
-  .slider {
-    padding: 10rem 0 0;
-  }
-  .intro-video{
-    position: relative;
-    width: 100%;
-    padding-top: 56.25%;
-    display: block;
-  }
-  .intro-video iframe{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-  }
+    .intro-section {
+      padding: 10rem 0 0;
+    }
 
-  .slider img{
-    max-width: 100%;
-  }
+    .slider {
+      padding: 0 0 0;
+    }
 
+    .intro-video {
+      position: relative;
+      width: 100%;
+      padding-top: 56.25%;
+      display: block;
+    }
+
+    .intro-video iframe {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
+
+    .slider img {
+      max-width: 100%;
+    }
   </style>
 
-    <!-- Intro Section -->
-    <section id="intro" class="intro-section text-center bg-light">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12 mx-auto">
-            <h2 class="mb-4">Introduction</h2>
-            <p>Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
-              <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-           <div class="intro-video">
-              <iframe width="100%" src="https://www.youtube.com/embed/QcIy9NiNbmo?start=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-            <div class="slider">
-              <div> <img src="img/slider/Pic1.jpg"></div>
-              <div> <img src="img/slider/Pic2.jpg"></div>
-              <div> <img src="img/slider/Pic4.jpg"></div>
-              <div> <img src="img/slider/Pic5.jpg"></div>
-              <div> <img src="img/slider/Pic3.jpg"></div>
-            </div>
+  <!-- Intro Section -->
+  <section id="intro" class="intro-section text-center bg-light">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 mx-auto">
+          <h2 class="mb-4">Introduction</h2>
+          <p>Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download
+            the template on
+            <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open
+            source, and you can use it for any purpose, personal or commercial.</p>
+          <div class="intro-video">
+            <iframe width="100%" src="https://www.youtube.com/embed/QcIy9NiNbmo?start=1" frameborder="0"
+              allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+          <br/>
+          <br/>
+          <div class="slider">
+            <div> <img src="img/slider/Pic1.jpg"></div>
+            <div> <img src="img/slider/Pic2.jpg"></div>
+            <div> <img src="img/slider/Pic4.jpg"></div>
+            <div> <img src="img/slider/Pic5.jpg"></div>
+            <div> <img src="img/slider/Pic3.jpg"></div>
           </div>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
 
 
 
@@ -236,7 +262,8 @@
         <div class="col-xl-4 col-lg-5">
           <div class="featured-text text-center text-lg-left">
             <h4>Shoreline</h4>
-            <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
+            <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any
+              project - even commercial projects! Download it, customize it, and publish your website!</p>
           </div>
         </div>
       </div>
@@ -251,7 +278,8 @@
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
                 <h4 class="text-white">Misty</h4>
-                <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else, along with a description.</p>
+                <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else,
+                  along with a description.</p>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
             </div>
@@ -269,15 +297,85 @@
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-right">
                 <h4 class="text-white">Mountains</h4>
-                <p class="mb-0 text-white-50">Another example of a project with its respective description. These sections work well responsively as well, try this theme on a small screen!</p>
+                <p class="mb-0 text-white-50">Another example of a project with its respective description. These
+                  sections work well responsively as well, try this theme on a small screen!</p>
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
             </div>
           </div>
         </div>
       </div>
+      <!-- Project three Row -->
+      <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+        <div class="col-lg-6">
+          <div class="slider project-slider">
+            <div class="image-bg" style="background-image:url(img/Hamster/IMG_8.jpg);"></div>
+            <div class="image-bg" style="background-image:url(img/Hamster/IMG_7.jpg);"></div>
+            <div class="image-bg" style="background-image:url(img/Hamster/IMG_6.jpg);"></div>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <div class="bg-black text-center h-100 project">
+            <div class="d-flex h-100">
+              <div class="project-text w-100 my-auto text-center text-lg-left">
+                <h4 class="text-white">Misty</h4>
+                <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else,
+                  along with a description.</p>
+                <hr class="d-none d-lg-block mb-0 ml-0">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
+      <!-- Project four Row -->
+      <div class="row justify-content-center no-gutters">
+        <div class="col-lg-6">
+          <div class="slider project-slider">
+            <div class="image-bg" style="background-image:url(img/Hamster/IMG_5.jpg);"></div>
+            <div class="image-bg" style="background-image:url(img/Hamster/IMG_2.jpg);"></div>
+            <div class="image-bg" style="background-image:url(img/Hamster/IMG_1.jpg);"></div>
+          </div>
+        </div>
+        <div class="col-lg-6 order-lg-first">
+          <div class="bg-black text-center h-100 project">
+            <div class="d-flex h-100">
+              <div class="project-text w-100 my-auto text-center text-lg-right">
+                <h4 class="text-white">Hamster</h4>
+                <p class="mb-0 text-white-50">Another example of a project with its respective description. These
+                  sections work well responsively as well, try this theme on a small screen!</p>
+                <hr class="d-none d-lg-block mb-0 mr-0">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
+    <style>
+      .project-slider {
+        height: 100%;
+        min-height: 400px;
+      }
+
+      .project-slider .slick-list,
+      .project-slider .slick-track,
+      .project-slider .slick-slide,
+      .project-slider .slick-slide>div {
+        height: 100%;
+      }
+
+      .project-slider .image-bg {
+        height: 100%;
+        background-position: center center;
+        background-size: cover;
+        background-repeat: no-repeat;
+      }
+    </style>
+
+
+
+
+
   </section>
 
   <!-- Signup Section -->
@@ -290,9 +388,21 @@
           <h2 class="text-white mb-5">Subscribe to receive updates!</h2>
 
           <form class="form-inline d-flex">
-            <input type="email" class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" placeholder="Enter email address...">
+            <input type="email" class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail"
+              placeholder="Enter email address...">
             <button type="submit" class="btn btn-primary mx-auto">Subscribe</button>
           </form>
+
+          <style>
+            #google-form {
+              width: 100%;
+              margin-top: 50px;
+            }
+          </style>
+
+          <iframe id="google-form"
+            src="https://docs.google.com/forms/d/e/1FAIpQLScZXAoFFxMChudlocjOWHzumHctbahup1StUlp10ZHj_k2d4Q/viewform?embedded=true"
+            width="640" height="450" frameborder="0" marginheight="0" marginwidth="0">正在載入…</iframe>
 
         </div>
       </div>
@@ -376,14 +486,14 @@
   <script type="text/javascript" src="//https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
   <script type="text/javascript" src="js/slick.min.js"></script>
   <script type="text/javascript">
-    $(document).ready(function(){
+    $(document).ready(function () {
       $('.slider').slick({
         autoplay: true,
         dots: true,
         prevArrow: '<button type="button" class="slick-buttons slick-prev"><span>Previous</span></button>',
         nextArrow: '<button type="button" class="slick-buttons slick-next"><span>Next</span></button>',
-        customPaging: function(slick,index) {
-          return '<button><span>' + (index+1) + '</span></button>';
+        customPaging: function (slick, index) {
+          return '<button><span>' + (index + 1) + '</span></button>';
         }
       });
     });
