--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
 <head>
 
   <!-- COMMON TAGS -->
-  <meta charset="utf-8">
-  <title>Black And White </title>
-  <!-- Search Engine -->
-  <meta name="description" content="How come I will know how to wtite the description ">
-  <meta name="image" content="https://atintina.github.io/startbootstrap-grayscale//img/slider/Pic2.jpg">
-  <!-- Schema.org for Google -->
-  <meta itemprop="name" content="B & W">
-  <meta itemprop="description" content="How come  I will know how to write the description ">
-  <meta itemprop="image" content="https://atintina.github.io/startbootstrap-grayscale//img/slider/Pic2.jpg">
-  <!-- Open Graph general (Facebook, Pinterest & Google+) -->
-  <meta name="og:title" content="B & W">
-  <meta name="og:description" content="How come  I will know how to write the description ">
-  <meta name="og:image" content="https://atintina.github.io/startbootstrap-grayscale//img/slider/Pic2.jpg">
-  <meta name="og:url" content="https://atintina.github.io/startbootstrap-grayscale/">
-  <meta name="og:site_name" content="B & W">
-  <meta name="og:type" content="website">
+<meta charset="utf-8">
+<title>TIN</title>
+<!-- Search Engine -->
+<meta name="description" content="Welcome to my world. This is the inside of the Tin. Here, you can discover more about me. How about we play a game, guest what kind of things I want to express in my works. ENJOY:)">
+<meta name="image" content="https://atintina.github.io/startbootstrap-grayscale//Profo/cover.jpg">
+<!-- Schema.org for Google -->
+<meta itemprop="name" content="TIN">
+<meta itemprop="description" content="Welcome to my world. This is the inside of the Tin. Here, you can discover more about me. How about we play a game, guest what kind of things I want to express in my works. ENJOY:)">
+<meta itemprop="image" content="https://atintina.github.io/startbootstrap-grayscale//Profo/cover.jpg">
+<!-- Open Graph general (Facebook, Pinterest & Google+) -->
+<meta name="og:title" content="TIN">
+<meta name="og:description" content="Welcome to my world. This is the inside of the Tin. Here, you can discover more about me. How about we play a game, guest what kind of things I want to express in my works. ENJOY:)">
+<meta name="og:image" content="https://atintina.github.io/startbootstrap-grayscale//Profo/cover.jpg">
+<meta name="og:url" content="https://atintina.github.io/startbootstrap-grayscale/">
+<meta name="og:site_name" content="TIN">
+<meta name="og:type" content="website">
 
 
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
