--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
 <meta charset="utf-8">
 <title>TIN</title>
 <!-- Search Engine -->
-<meta name="description" content="Welcome to my world. This is the inside of the Tin. Here, you can discover more about me. How about we play a game, guest what kind of things I want to express in my works. ENJOY:)">
+<meta name="description" content="Welcome to my world. This is the outside of the Tin. Go inside, you can discover more about me. ENJOY:)">
 <meta name="image" content="https://atintina.github.io/startbootstrap-grayscale//Profo/cover.jpg">
 <!-- Schema.org for Google -->
 <meta itemprop="name" content="TIN">
-<meta itemprop="description" content="Welcome to my world. This is the inside of the Tin. Here, you can discover more about me. How about we play a game, guest what kind of things I want to express in my works. ENJOY:)">
+<meta itemprop="description" content="Welcome to my world. This is the outside of the Tin. Go inside, you can discover more about me.  ENJOY:)">
 <meta itemprop="image" content="https://atintina.github.io/startbootstrap-grayscale//Profo/cover.jpg">
 <!-- Open Graph general (Facebook, Pinterest & Google+) -->
 <meta name="og:title" content="TIN">
-<meta name="og:description" content="Welcome to my world. This is the inside of the Tin. Here, you can discover more about me. How about we play a game, guest what kind of things I want to express in my works. ENJOY:)">
+<meta name="og:description" content="Welcome to my world. This is the outside of the Tin. Go inside, you can discover more about me. ENJOY:)">
 <meta name="og:image" content="https://atintina.github.io/startbootstrap-grayscale//Profo/cover.jpg">
 <meta name="og:url" content="https://atintina.github.io/startbootstrap-grayscale/">
 <meta name="og:site_name" content="TIN">
@@ -27,7 +27,7 @@
   <meta name="author" content="">
 
 
-
+  
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -81,9 +81,9 @@
   <header class="masthead">
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center">
-        <h1 class="mx-auto my-0 text-uppercase">Only B&W?</h1>
-        <h2 class="text-white-50 mx-auto mt-2 mb-5">Adult teach us BLACK & WHITE, but how to define B&W</h2>
-        <a href="#about" class="btn btn-primary js-scroll-trigger">GREY</a>
+        <h1 class="mx-auto my-0 text-uppercase">TIN</h1>
+        <h2 class="text-white mx-auto mt-2 mb-5">Welcome to my world. This is the outside of the Tin.</h2>
+        <a href="#about" class="btn btn-primary js-scroll-trigger">OPEN!</a>
       </div>
     </div>
   </header>
@@ -92,15 +92,22 @@
   <section id="about" class="about-section text-center">
     <div class="container">
       <div class="row">
-        <div class="col-lg-8 mx-auto">
-          <h2 class="text-white mb-4">Built with Bootstrap 4</h2>
-          <p class="text-white-50">Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right
-            now, simply download the template on
-            <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open
-            source, and you can use it for any purpose, personal or commercial.</p>
+        <div class="col-lg-5 mx-auto">
+          <h2 class="text-pink-50 mb-4">About My Portfolio</h2>
+          <p class="text-pink-50">I am using Tin as the cover page. Without packaging, this Tin is boring, nothing special, no one is willing to buy it home. It’s a Tin only. What I want to present here is, I am nothing special only if you flashily take a look on me. Open it, ponder carefully, this Tin will give you another thought. 
+            After you open this Tin, you can discover I got a lot of different pieces. These pieces can create so many beautiful pictures in different combination. You can check my 
+            
+            <a href="https://drive.google.com/open?id=1P3eDWa3499OEnfQyRGqsc6JJEvu83PNl">FULL VERSION</a>. Hope you enjoy both!</p>
         </div>
       </div>
-      <img src="img/ipad.png" class="img-fluid" alt="">
+      <img src="img/PinkTin.png" class="img-fluid" alt="">
+    </br>
+  </br>
+</br>
+</br>
+</br>
+</br>
+</br>
     </div>
   </section>
 
@@ -136,11 +143,11 @@
       height: 10px;
       border-radius: 5px;
       content: '';
-      background-color: #911414;
+      background-color: #fc9b9b;
     }
 
     .slick-dots li.slick-active button:before {
-      background-color: #000000;
+      background-color: #808080;
     }
 
     .slick-buttons {
@@ -164,7 +171,7 @@
       display: block;
       width: 20px;
       height: 20px;
-      border-color: #ad000088;
+      border-color: #7c7c7c88;
       content: '';
     }
 
@@ -177,7 +184,7 @@
       border-left-width: 8px;
       border-top-style: solid;
       border-left-style: solid;
-      transform: rotate(-25deg);
+      transform: rotate(-45deg);
     }
 
     .slick-buttons.slick-next:before {
@@ -185,7 +192,7 @@
       border-right-width: 8px;
       border-bottom-style: solid;
       border-right-style: solid;
-      transform: rotate(-25deg);
+      transform: rotate(-45deg);
     }
 
     .slick-buttons.slick-next {
@@ -225,27 +232,27 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 mx-auto">
-          <h2 class="mb-4">Introduction</h2>
-          <p>Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download
-            the template on
-            <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open
-            source, and you can use it for any purpose, personal or commercial.</p>
-          <div class="intro-video">
-            <iframe width="100%" src="https://www.youtube.com/embed/QcIy9NiNbmo?start=1" frameborder="0"
-              allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          </div>
-          <br/>
-          <br/>
+          <h2 class="mb-4">Breif Introduction</h2>
+          <p></p>
           <div class="slider">
-            <div> <img src="img/slider/Pic1.jpg"></div>
-            <div> <img src="img/slider/Pic2.jpg"></div>
-            <div> <img src="img/slider/Pic4.jpg"></div>
-            <div> <img src="img/slider/Pic5.jpg"></div>
-            <div> <img src="img/slider/Pic3.jpg"></div>
+            <div> <img src="img/Profo/Tin.jpg"></div>
+            <div> <img src="img/Profo/5.png"></div>
+            <div> <img src="img/Profo/2.png"></div>
+            <div> <img src="img/Profo/4.png"></div>
+            <div> <img src="img/Profo/1.png"></div>
+          </div>
+        </br>
+      </br>
+    </br>
+  </br>
+  <h2 class="mb-2">Animation Work for LUSH</h2>
+          <div class="intro-video ">
+            <iframe width=100% src="https://www.youtube.com/embed/dLl1hWmDk38" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
         </div>
       </div>
     </div>
+          
   </section>
 
 
@@ -257,93 +264,112 @@
       <!-- Featured Project Row -->
       <div class="row align-items-center no-gutters mb-4 mb-lg-5">
         <div class="col-xl-8 col-lg-7">
-          <img class="img-fluid mb-3 mb-lg-0" src="img/bg-masthead.jpg" alt="">
+          <img class="img-fluid mb-3 mb-lg-0" src="img/Me.jpg" alt="">
         </div>
         <div class="col-xl-4 col-lg-5">
           <div class="featured-text text-center text-lg-left">
-            <h4>Shoreline</h4>
-            <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any
-              project - even commercial projects! Download it, customize it, and publish your website!</p>
+            <h4>My Thought on Advertising Industry </h4>
+            <p class="text-black-50 mb-0">In our life, most of the advertisement campaign media will be poster, TVC, activities. For most of the Hong Konger, they need to work at 8a.m to 7p.m, not included OT. The time that they travelling is part of the time can let them to do some relax. I don’t think they want to use their time to read the poster or TVC. I hope I can create the advertising that can cause their curious, and to look around. Like using aroma, 3D projection, or even though asking the model to walk a catwalk in the MTR tunnel in a reverse way.</p>
           </div>
         </div>
       </div>
 
       <!-- Project One Row -->
-      <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+      <div class="row justify-content-center no-gutters">
         <div class="col-lg-6">
-          <img class="img-fluid" src="img/demo-image-01.jpg" alt="">
+          <div class="slider project-slider">
+            <div class="image-bg" style="background-image:url(img/Work/1.1.png);"></div>
+            <div class="image-bg" style="background-image:url(img/Work/1.2.png);"></div>
+            <div class="image-bg" style="background-image:url(img/Work/1.3.png);"></div>
+          </div>
         </div>
-        <div class="col-lg-6">
+        <div class="col-lg-6 order-lg-first">
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
-                <h4 class="text-white">Misty</h4>
-                <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else,
-                  along with a description.</p>
+                <h4 class="text-white">Please Mind The Gap</h4>
+                <p class="mb-0 text-white-50">Thought this campaign, we hope to promote GAP has design different clothes and shoes that are specifically with for every generation..</p>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
             </div>
           </div>
         </div>
       </div>
-
+    </br>
+  </br>
+</br>
+</br>
+</br>
       <!-- Project Two Row -->
-      <div class="row justify-content-center no-gutters">
+      <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6">
-          <img class="img-fluid" src="img/demo-image-02.jpg" alt="">
+          <div class="slider project-slider">
+            <div class="image-bg" style="background-image:url(img//Work/2.1.png);"></div>
+            <div class="image-bg" style="background-image:url(img//Work/2.2.png);"></div>
+            <div class="image-bg" style="background-image:url(img//Work/2.3.png);"></div>
+          </div>
         </div>
-        <div class="col-lg-6 order-lg-first">
+        <div class="col-lg-6">
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-right">
-                <h4 class="text-white">Mountains</h4>
-                <p class="mb-0 text-white-50">Another example of a project with its respective description. These
-                  sections work well responsively as well, try this theme on a small screen!</p>
+                <h4 class="text-white">JumpsPower</h4>
+                <p class="mb-0 text-white-50">As Hong Kong still have quite a lot of people do not know JumpsPower or even do not know there is a mini-jump starter invented. So, though this project I hope I can let Jump- sPower replace the traditional jump start way and let more people know this now tecnology.</p>
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
             </div>
           </div>
         </div>
       </div>
+    </br>
+  </br>
+</br>
+</br>
+</br>
       <!-- Project three Row -->
       <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6">
           <div class="slider project-slider">
-            <div class="image-bg" style="background-image:url(img/Hamster/IMG_8.jpg);"></div>
-            <div class="image-bg" style="background-image:url(img/Hamster/IMG_7.jpg);"></div>
-            <div class="image-bg" style="background-image:url(img/Hamster/IMG_6.jpg);"></div>
+            <div class="image-bg" style="background-image:url(img//Work/3.1.png);"></div>
+            <div class="image-bg" style="background-image:url(img//Work/3.2.png);"></div>
+            <div class="image-bg" style="background-image:url(img//Work/3.3.png);"></div>
           </div>
         </div>
         <div class="col-lg-6">
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
-                <h4 class="text-white">Misty</h4>
-                <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else,
-                  along with a description.</p>
+                <h4 class="text-white">Tresure Your Mother’s Words</h4>
+                <p class="mb-0 text-white-50">It is almost Mother’s Day while doing this assignment, so, I use Mother’s day as my video theme.
+                  In most of the days of a year, we ignore our mum very often. Only few days, like mother’s day, we will think of mum.
+                  Can you imagine one day, your mum no longer live with you or stay with you, will you recall some of the words she said? Will you regret that you never listen to her words?</p>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
             </div>
           </div>
         </div>
       </div>
-
+    </br>
+  </br>
+</br>
+</br>
+</br>
       <!-- Project four Row -->
       <div class="row justify-content-center no-gutters">
         <div class="col-lg-6">
           <div class="slider project-slider">
-            <div class="image-bg" style="background-image:url(img/Hamster/IMG_5.jpg);"></div>
-            <div class="image-bg" style="background-image:url(img/Hamster/IMG_2.jpg);"></div>
-            <div class="image-bg" style="background-image:url(img/Hamster/IMG_1.jpg);"></div>
+            <div class="image-bg" style="background-image:url(img//Work/4.1.png);"></div>
+            <div class="image-bg" style="background-image:url(img//Work/4.2.png);"></div>
+            <div class="image-bg" style="background-image:url(img//Work/4.3.png);"></div>
+            <div class="image-bg" style="background-image:url(img//Work/4.4.png);"></div>
           </div>
         </div>
         <div class="col-lg-6 order-lg-first">
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-right">
-                <h4 class="text-white">Hamster</h4>
-                <p class="mb-0 text-white-50">Another example of a project with its respective description. These
-                  sections work well responsively as well, try this theme on a small screen!</p>
+                <h4 class="text-white">Small Act Big Impact</h4>
+                <p class="mb-0 text-white-50">To convey the message “Less is more”, and tell the audience that, LUSH is an environmental friendly brand</p>
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
             </div>
@@ -421,7 +447,7 @@
               <i class="fas fa-map-marked-alt text-primary mb-2"></i>
               <h4 class="text-uppercase m-0">Address</h4>
               <hr class="my-4">
-              <div class="small text-black-50">4923 Market Street, Orlando FL</div>
+              <div class="small text-black-50">I live in your MIND <3</div>
             </div>
           </div>
         </div>
@@ -430,7 +456,7 @@
           <div class="card py-4 h-100">
             <div class="card-body text-center">
               <i class="fas fa-envelope text-primary mb-2"></i>
-              <h4 class="text-uppercase m-0">Email</h4>
+              <h4 class="text-uppercase m-0">Find Me</h4>
               <hr class="my-4">
               <div class="small text-black-50">
                 <a href="https://github.com/atintina">https://github.com/atintina</a>
@@ -469,7 +495,7 @@
   <!-- Footer -->
   <footer class="bg-black small text-center text-white-50">
     <div class="container">
-      Copyright &copy; TINTIN BB 2019
+      Copyright &copy; Christy 2019
     </div>
   </footer>
 
