--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
 
   <link rel="stylesheet" type="text/css" href="css/slick.css" />
 
-
+  <style>
+    @import url('https://fonts.googleapis.com/css?family=Comfortaa|Lobster&display=swap');
+    </style>
 </head>
 
 <body id="page-top">
@@ -288,7 +290,7 @@
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
                 <h4 class="text-white">Please Mind The Gap</h4>
-                <p class="mb-0 text-white-50">Thought this campaign, we hope to promote GAP has design different clothes and shoes that are specifically with for every generation..</p>
+                <p class="text-black-50 mb-0">Thought this campaign, we hope to promote GAP has design different clothes and shoes that are specifically with for every generation..</p>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
             </div>
@@ -314,7 +316,7 @@
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-right">
                 <h4 class="text-white">JumpsPower</h4>
-                <p class="mb-0 text-white-50">As Hong Kong still have quite a lot of people do not know JumpsPower or even do not know there is a mini-jump starter invented. So, though this project I hope I can let Jump- sPower replace the traditional jump start way and let more people know this now tecnology.</p>
+                <p class="text-black-50 mb-0">As Hong Kong still have quite a lot of people do not know JumpsPower or even do not know there is a mini-jump starter invented. So, though this project I hope I can let Jump- sPower replace the traditional jump start way and let more people know this now tecnology.</p>
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
             </div>
@@ -340,7 +342,7 @@
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
                 <h4 class="text-white">Tresure Your Mother’s Words</h4>
-                <p class="mb-0 text-white-50">It is almost Mother’s Day while doing this assignment, so, I use Mother’s day as my video theme.
+                <p class="text-black-50 mb-0">It is almost Mother’s Day while doing this assignment, so, I use Mother’s day as my video theme.
                   In most of the days of a year, we ignore our mum very often. Only few days, like mother’s day, we will think of mum.
                   Can you imagine one day, your mum no longer live with you or stay with you, will you recall some of the words she said? Will you regret that you never listen to her words?</p>
                 <hr class="d-none d-lg-block mb-0 ml-0">
@@ -369,7 +371,7 @@
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-right">
                 <h4 class="text-white">Small Act Big Impact</h4>
-                <p class="mb-0 text-white-50">To convey the message “Less is more”, and tell the audience that, LUSH is an environmental friendly brand</p>
+                <p class="text-black-50 mb-0">To convey the message “Less is more”, and tell the audience that, LUSH is an environmental friendly brand</p>
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
             </div>
@@ -411,12 +413,12 @@
         <div class="col-md-10 col-lg-8 mx-auto text-center">
 
           <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
-          <h2 class="text-white mb-5">Subscribe to receive updates!</h2>
+          <h2 class="text-white mb-5">Leave Me Your Contect?</h2>
 
           <form class="form-inline d-flex">
             <input type="email" class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail"
               placeholder="Enter email address...">
-            <button type="submit" class="btn btn-primary mx-auto">Subscribe</button>
+            <button type="submit" class="btn btn-primary mx-auto">OK!</button>
           </form>
 
           <style>
