--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 mx-auto">
-          <h2 class="mb-4">Breif Introduction</h2>
+          <h2 class="mb-4">Brief Introduction</h2>
           <p></p>
           <div class="slider">
             <div> <img src="img/Profo/Tin.jpg"></div>
